@@ -1,5 +1,6 @@
 Current
 7.10.0
+Fixed: GITHUB-3064: TestResult lost if failure creating RetryAnalyzer (Krishnan Mahadevan)
 Fixed: GITHUB-3048: ConcurrentModificationException when injecting values (Krishnan Mahadevan)
 Fixed: GITHUB-3050: Race condition when creating Guice Modules (Krishnan Mahadevan)
 Fixed: GITHUB-3059: Support the ability to inject custom listener factory (Krishnan Mahadevan)
